--- a/src/view/index.pug
+++ b/src/view/index.pug
@@ -205,7 +205,7 @@ block content
                             svg.union
                               use(href='/image/icon/unionpay.svg#unionpay')
               .form__text
-                input(type="checkbox").checkbox#agreement
+                input(type="checkbox" checked).checkbox#agreement
                 label(for="agreement").checkbox-label
                   svg
                     use(href='/image/icon/check.svg#check')
@@ -257,7 +257,7 @@ block content
                   | &#8381;
         .index__video.object
           video(autoplay loop muted playsinline)
-            source(src='/video/main.mp4' type='video/mp4')
+            source(src='./video/main.mp4' type='video/mp4')
   section#steps
     .container
       .steps.content.object-wrapper
